# app/Entities/User.php
@@ -32,7 +32,7 @@ class User extends Model implements AuthenticatableContract,
      *
      * @var array
      */
-    protected $fillable = ['name', 'email', 'password'];
+    protected $fillable = ['name', 'email', 'password','media_id'];
 
     /**
      * The attributes excluded from the model's JSON form.
