# app/Http/Controllers/UserController.php
@@ -3,9 +3,8 @@
 namespace App\Http\Controllers;
 
 use App\Repositories\UserRepository;
-use Illuminate\Http\Request;
-
-use App\Http\Requests;
+use App\Entities\User;
+use Request;
 use App\Http\Controllers\Controller;
 use App\Repositories\CategorieRepository;
 
@@ -28,29 +27,36 @@ class UserController extends Controller
     }
 
 
-    public function addUser($User)
+    public function addUser()
     {
-        $this->repository->addUser($User);
+        $user=new User();
+        $user->name=Request::input('name');
+        $user->email=Request::input('email');
+        $user->password=Request::input('password');
+        $user->media_id=Request::input('media_id');
+        //var_dump($section);
+
+        var_dump($this->repository->addUser($user));
     }
 
 
-    public function user($id)
+public function user($id)
     {
-        return $this->repository->getUser($id);
+return $this->repository->getUser($id);
 
 
-    }
+}
 
 
-    public function updateUser($User, $User_id)
-    {
-        $this->repository->updateUser($User, $User_id);
-    }
+public function updateUser($User, $User_id)
+{
+    $this->repository->updateUser($User, $User_id);
+}
 
 
 
 
-    public function deleteUsers($ids)
+public function deleteUsers($ids)
     {
 
         $this->repository->deleteUsers($ids);
