# storage/api-docs/api-docs.json
@@ -10,84 +10,7 @@
     "paths": {
 
 
-        "/magazine-tunisie/public/article": {
-            "get": {
-                "tags": [
-                    "article"
-                ],
-                "summary": "list articles",
-                "responses": {
-                    "200": {
-                        "description": "A list of articles"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "article"
-                ],
-                "summary": "Add a new article to the store",
-                "description": "",
-                "operationId": "Article",
-                "consumes": [
-                    "application/json",
-                    "application/xml"
-                ],
-                "produces": [
-                    "application/json",
-                    "application/xml"
-                ],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "articke",
-                        "description": "article object that needs to be added to the store",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/Article"
-                        }
-                    }
-                ],
-                "responses": {
-                    "405": {
-                        "description": "Invalid input"
-                    }
-                },
-                "security": [
-                    {
-                        "petstore_auth": [
-                            "write:pets",
-                            "read:pets"
-                        ]
-                    }
-                ]
-            }
-        },
 
-
-        "/magazine-tunisie/public/article/{articleId}": {
-            "get": {
-                "tags": [
-                    "article"
-                ],
-                "summary": "Find article by ID",
-                "parameters": [
-                    {
-                        "name": "articleId",
-                        "in": "path",
-                        "description": "ID of article that needs to be fetched",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "A list of articles"
-                    }
-                }
-            }
-        },
 
 
 
@@ -190,8 +113,22 @@
 
 
 
+        "/magazine-tunisie/public/sections": {
+            "get": {
+                "tags": [
+                    "section"
+                ],
+                "summary": "list sections with categories",
+                "responses": {
+
+                    "200": {
+                        "description": "A list of sections with categories"
 
 
+                    }
+                }
+            }
+        },
 
 
 
@@ -332,15 +269,6 @@
                 }
             }
         },
-
-
-
-
-
-
-
-
-
 
         "/magazine-tunisie/public/media/{id}": {
             "get": {
@@ -492,6 +420,43 @@
             }
         },
 
+        "/magazine-tunisie/public/categories/{section_id}": {
+            "get": {
+                "tags": [
+                    "categorie"
+                ],
+                "summary": "Find categorie by section_ID",
+
+
+                "parameters": [
+                    {
+                        "name": "section_id",
+                        "in": "path",
+                        "description": "ID of categorie that needs to be fetched",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response",
+                        "schema": {
+
+                            "$ref": "#/definitions/categorie"
+
+                        }
+                    },
+                    "default": {
+                        "description": "error payload",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+
         "/magazine-tunisie/public/categorie/{id}": {
             "get": {
                 "tags": [
@@ -527,8 +492,351 @@
                     }
                 }
             }
-        }
+        },
 
+
+
+
+        "/magazine-tunisie/public/article": {
+            "post": {
+                "tags": [
+                    "article"
+                ],
+                "summary": "Add a new article to the store",
+                "description": "",
+                "operationId": "Article",
+                "consumes": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "article",
+                        "description": "article object that needs to be added to the store",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/Article"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/Article"
+                        }
+                    },
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:pets",
+                            "read:pets"
+                        ]
+                    }
+                ]
+            },
+            "get": {
+                "tags": [
+                    "article"
+                ],
+                "summary": "list Articles",
+                "responses": {
+
+                    "200": {
+                        "description": "A list of Articles"
+
+
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "article"
+                ],
+                "summary": "delete Article by ID",
+
+
+                "parameters": [
+                    {
+                        "name": "ids",
+                        "in": "body",
+                        "description": "IDs of Article that needs to be fetched",
+                        "required": true,
+                        "type": "array",
+                        "items": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+
+
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response"
+
+                    },
+                    "default": {
+                        "description": "error payload",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+
+        "/magazine-tunisie/public/articles/{section_id}": {
+            "get": {
+                "tags": [
+                    "article"
+                ],
+                "summary": "Find Article by section_ID",
+
+
+                "parameters": [
+                    {
+                        "name": "section_id",
+                        "in": "path",
+                        "description": "ID of Article that needs to be fetched",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response",
+                        "schema": {
+
+                            "$ref": "#/definitions/Article"
+
+                        }
+                    },
+                    "default": {
+                        "description": "error payload",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+
+        "/magazine-tunisie/public/article/{id}": {
+            "get": {
+                "tags": [
+                    "article"
+                ],
+                "summary": "Find Article by ID",
+
+
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of Article that needs to be fetched",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response",
+                        "schema": {
+
+                            "$ref": "#/definitions/Article"
+
+                        }
+                    },
+                    "default": {
+                        "description": "error payload",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/magazine-tunisie/public/articles": {
+            "get": {
+                "tags": [
+                    "article"
+                ],
+                "summary": "list Articles with medias",
+                "responses": {
+
+                    "200": {
+                        "description": "A list of Articles with medias"
+
+
+                    }
+                }
+            }
+        },
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        "/magazine-tunisie/public/user": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Add a new user to the store",
+                "description": "",
+                "operationId": "User",
+                "consumes": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "user",
+                        "description": "user object that needs to be added to the store",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/User"
+                        }
+                    },
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:pets",
+                            "read:pets"
+                        ]
+                    }
+                ]
+            },
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "list users",
+                "responses": {
+
+                    "200": {
+                        "description": "A list of users"
+
+
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "delete user by ID",
+
+
+                "parameters": [
+                    {
+                        "name": "ids",
+                        "in": "body",
+                        "description": "IDs of users that needs to be fetched",
+                        "required": true,
+                        "type": "array",
+                        "items": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+
+
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response"
+
+                    },
+                    "default": {
+                        "description": "error payload",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        },
+
+        "/magazine-tunisie/public/user/{id}": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Find user by ID",
+
+
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of user that needs to be fetched",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "pet response",
+                        "schema": {
+
+                            "$ref": "#/definitions/user"
+
+                        }
+                    },
+                    "default": {
+                        "description": "error payload",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            }
+        }
 
 
 
@@ -591,23 +899,6 @@
 
 
 
-        "Article": {
-            "type": "object",
-            "required": [
-                "id",
-                "title"
-            ],
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "title": {
-                    "type": "string"
-                }
-
-            }
-        },
 
 
 
@@ -628,6 +919,81 @@
                     "type": "string"
                 },
                 "article_id": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+
+            }
+        },
+
+
+
+
+        "Article": {
+            "type": "object",
+            "required": [
+                "id",
+                "title",
+                "text",
+                "user_id",
+                "categorie_id",
+                "section_id"
+
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "section_id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "categorie_id": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+
+
+            }
+        },
+
+
+
+        "User": {
+            "type": "object",
+            "required": [
+                "id",
+                "name",
+                "email",
+                "password",
+                "media_id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "media_id": {
                     "type": "integer",
                     "format": "int64"
                 }
